# CoBeBeEngine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  basic_template.html
Diagrams/: Colliders.dia  CoreEntityComponent.dia  CoreEntityComponent.dia~  Lighting+GUI.dia  Lighting+GUI.dia~  Resources.dia
Resources/: BeepBox.txt
Resources/animations/: attack.anm  attack2.anm  defend.anm  defend2.anm
Resources/deferred_shaders/: lightingG.shad  renderG.shad  renderGAni.shad  renderGSkin.shad
Resources/emscripten_shaders/: gbufferCheck.shad  lightingG.shad  lightingGset.shad  lightkeypass.shad  mergepass.shad  nullpass.shad  phong.shad  renderG.shad  renderG1.shad  renderGAni.shad  renderGAni1.shad  renderGAni2.shad  renderGSkin.shad  shadow.shad  shadowAni.shad  shadowAniCube.shad  shadowCheck.shad  shadowCube.shad  static.shad
Resources/gltf/: Character Running.gltf  Cube.gltf  speed.gltf
Resources/pbr_shaders/: lightingG_PBR.shad  renderG_PBR.shad
Resources/shaders/: fxaa.shad  nullpass.shad  static.shad
Resources/shadows/: cubeMap.shad  pcfmap.shad  shadowAni.shad  shadowAniCube.shad  shadowCube.shad  shadowmap.shad  spsmap.shad
Resources/test_shaders/: renderG2.shad  renderGAni1.shad  shadowCubeCheck.shad
shaders/: blur.shad  lightkeypass.shad  phong.shad  static.shad
shadows/: pcfmap.shad  shadow.shad  shadowmap.shad  spsmap.shad
src/cobebe/: Cobebe.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Exception.cpp  Exception.h  Keyboard.h  Mouse.cpp  Mouse.h  NonCopyable.h  Renderer.h  Resources.h  TriangleRenderer.cpp  TriangleRenderer.h
src/cobebe/Collider/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h  CollisionManager.cpp  CollisionManager.h  StaticModelCollider.cpp  StaticModelCollider.h  aabb.cpp  raytri.cpp  tribox.cpp
src/cobebe/Core/: Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Gamepad.cpp  Gamepad.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Transform.cpp  Transform.h
src/cobebe/GUI/: ButtonGUI.cpp  ButtonGUI.h  Canvas.cpp  Canvas.h  ImageGUI.cpp  ImageGUI.h
src/cobebe/Renderer/: AnimationController.cpp  AnimationController.h  GltfAnimationController.cpp  GltfAnimationController.h  Lighting.cpp  Lighting.h  ObjAnimationController.cpp  ObjAnimationController.h  PBRenderer.cpp  PBRenderer.h  PointLight.cpp  PointLight.h  Renderer.cpp  Renderer.h  ShadowRenderer.cpp  ShadowRenderer.h
src/cobebe/Resources/: Asset.cpp  Asset.h  RendAssets.cpp  RendAssets.h  Resources.cpp  Resources.h  Sound.cpp  Sound.h
src/cobebe/Speaker/: Speaker.cpp  Speaker.h
src/dungeon/: Bloom.cpp  Bloom.h  PlayerController.cpp  PlayerController.h  game.cpp  main.cpp
src/glwrap/: Animation.cpp  Animation.h  Context.cpp  Context.h  DepthBuffer.cpp  DepthBuffer.h  DepthCube.cpp  DepthCube.h  FileManager.cpp  FileManager.h  Frame.cpp  Frame.h  GBuffer.cpp  GBuffer.h  GltfModel.cpp  GltfModel.h  GltfParse.h  Material.cpp  Material.h  Model.cpp  Model.h  Model3D.h  ModelAnimation.cpp  ModelAnimation.h  ModelJoint.cpp  ModelJoint.h  ModelMesh.cpp  ModelMesh.h  ObjAnimation.cpp  ObjAnimation.h  ObjFrame.cpp  ObjFrame.h  ObjMtlModel.cpp  ObjMtlModel.h  ObjPart.cpp  ObjPart.h  PBRUniforms.cpp  PBRUniforms.h  Part.cpp  Part.h  (+13 more)
src/lightDemo/: SceneController.cpp  SceneController.h  main.cpp
src/plat/: main.cpp
src/rhythmTech/: BGMusic.cpp  BGMusic.h  BeatController.cpp  BeatController.h  BeatMonitor.cpp  BeatMonitor.h  EnemyTemplate.cpp  EnemyTemplate.h  PlayerController.cpp  PlayerController.h  main.cpp
